examples/errors/Aurora.flx
  fun echo(x, x) {
    return x;
  }
